# AHAT

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: ahat_domain.pddl
scripts/: deploy_model.py  download_data.py  download_model.py
src/ahat/: __init__.py  cli.py
src/ahat/configs/: constants.py
src/ahat/evaluation/: __init__.py  parsability.py  solvability.py
src/ahat/pddl/: __init__.py  domain_parser.py  planner.py  problem_generator.py
src/ahat/planning/: decompose.py  pipeline.py  solve.py
src/ahat/prompts/: task_decompose.py
src/ahat/scene_graph/: __init__.py  scene_graph.py
src/ahat/schemas/: entities.py  typings.py
src/ahat/utils/: runtime.py
